+Increase persistence limit for search in directory history
+Add support for DSP56K assembly
+Add support for OOC programming language
+Support multiple views of the same file within the same window.
+Add support for NONMEM Control Stream files (patch from Robert McLeay)
+Updated CodeBrowser plugin 1.2 (sort view by line number or alphabetically)

BUG FIXES:
+Fix major error in handling events when more than one window has been opened.
+Fix bug in style sheet parsing that was not properly setting undefined style
tags to the default_style.
+Fix encoding detection issue that could lead to unhanded exception error.
+Fix handling of Unicode text by Django lexer.
+Fix issues with detecting UTF-16 encoded files that don't have a BOM.
+Fix not being able to run executables in Launch that have spaces in their
paths on Windows.
+Fix issues with aborting processes with Launch plugin on Windows.
+Fix crash that could occur if text was dragged over PluginMgr ListBox.
+Fix issue in Shelf tabs not being restored in correct order
+Fix issue where context menu on editor tabs could refer to wrong tab.
+Fix error that could occur when showing statusbar popumenu for line endings
caused by improper menu item type.
+Fix DeadObjectError in UpdateFileHistory

#-----------------------------------------------------------------------------#

VERSION 0.5.72
DATE 06/24/2010
36th Alpha Release

NEWS:
This release addresses a critical bug in the handling of HTML/XML files.

BUG FIXES:
+Fix error in HTML autocompletion.
+Fix application icon not showing up on Windows Vista and 7.
+Fix spellchecker dependencies missing in Windows binary builds.

#-----------------------------------------------------------------------------#

VERSION 0.5.70
DATE 06/12/2010
35th Alpha Release

NEWS:

NEW: [features/improvements]
+Improved TCL/Tk Highlighting
+Updated CodeBrowser Plugin 1.1 (improved Tcl/Tk, C, and CSS Support)
+Update Launch Plugin 1.7 (word wrap and lock file options)